# trench-coat

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  release-notes-v0.5.0.md  release-notes-v1.0.0.md  requirements.txt
.github/workflows/: ci.yml
assets/marketing/: TRENCH-COAT-LAUNCH-TWEET.txt
browser_extension/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
configs/: tor-test.yaml
configs/presets/: ghost.example.yaml
configs/templates/: casual-tor.yaml  journalist-field.yaml  vpn-then-tor.yaml
docs/: AEO.md  DEVELOPMENT_PLAN.md  GHOST-CONTINUUM.md  HOW_THE_CLOAK_WORKS.md  LOCAL_HOPS_SETUP.md  README.md  ROADMAP_RESIDUAL.md  WHAT_THIS_DOES.md
docs/architecture/: OVERVIEW.md  SYSTEM_ROUTING.md
docs/dossiers/: THREAT_MODEL.md
docs/landing/: index.html
docs/security/: AUDIT_CHECKLIST.md  AUDIT_RESPONSE.md  HARDENING.md  THIRD_PARTY_AUDIT.md
gui/tauri/: README.md  tauri.conf.json
gui/web/: index.html
gui/web/src/: app.js
landing/: _headers  index.html  llms.txt  projects-panel.js  robots.txt  sitemap.xml
landing/.well-known/: indexnow-key.txt
packaging/: nft-trenchcoat.nft  pf-trenchcoat.conf  trenchcoat.spec  windows-wfp-notes.md
plugins/: README.md
scripts/: check_mojibake.py  configure_lab_hops.py  deploy-landing.ps1  engage-up.bat  engage-windows.ps1  install.ps1  install.sh  local_socks_hop.py  package.ps1  render_infographic.py  render_og_card.py  start-local-hops.ps1  start-tor.ps1  start-tor.sh
src/trenchcoat/: __init__.py  __main__.py  cli.py
src/trenchcoat/api/: __init__.py  server.py
src/trenchcoat/config/: __init__.py  loader.py  models.py  presets.py  templates.py
src/trenchcoat/engine/: __init__.py  chain.py  (+15 more)
tests/: test_chain_builder.py  test_decoy.py  test_dossier.py  test_fail_closed.py  test_killswitch.py  test_noir.py  test_optimizer.py  test_plugins.py  test_presets.py  test_proxy_split.py  test_split_tunnel.py  test_telemetry.py  test_tor_detect.py
(+27 files in other folders)
